# vibix

./: .dockerignore  .gitignore  .greptile.yaml  AGENTS.md  Cargo.toml  Dockerfile  LICENSE-APACHE  LICENSE-MIT  README.md  clippy.toml  rust-toolchain.toml
.cargo/: config.toml
.claude/skills/auto-engineer/: SKILL.md
.claude/skills/auto-manager/: SKILL.md
.claude/skills/file-issue/: SKILL.md
.claude/skills/os-researcher/: SKILL.md
.claude/skills/project-report/: SKILL.md
.claude/skills/sdlc/: SKILL.md
.claude/skills/test/: SKILL.md
.claude/skills/usage/: SKILL.md  probe.sh
.claude/skills/wait-for-pr/: SKILL.md
.cursor/skills/cursor-cloud-auto-engineer/: SKILL.md
.github/workflows/: ci.yml  claude.yml  file-bug.yml  issue-backfill.yml  nightly-simulator.yml  nightly-soak.yml  smoke-soak.yml
bench/page-cache/: Cargo.toml  README.md
bench/page-cache/src/: main.rs
docs/: README.md  acpi.md  boot.md  diagnostics.md  framebuffer.md  input.md  interrupts.md  isr-paging-audit.md  memory.md  serial.md  tasks.md  time.md
docs/RFC/: 0001-userspace-vm.md  0002-virtual-filesystem.md  0003-pipes-poll-tty.md  0004-ext2-filesystem-driver.md  0005-scheduler-irq-seam.md  0006-host-dst-simulator.md  0006-page-cache-file-mmap.md  0007-page-cache-file-mmap.md  0008-host-dst-syscall-seam.md
docs/agent-playbooks/: build-run.md  pr-review.md  prioritization.md  rfc.md  sdlc.md  skill-composition.md  sync-discipline.md  testing.md
docs/attribution/: pjdfstest.md
docs/design/: dst-478-investigation.md  dst-709-rebaseline.md  scheduler-seam.md  simulator.md
docs/fork-hang/: typing-dead.md
docs/incident-logs/: README.md
docs/investigations/: 502-fork-trace.md
docs/repros/: fork-loop.md
kernel/: Cargo.toml  build.rs  limine.conf  linker.ld
kernel/fuzz/: Cargo.toml  README.md
kernel/fuzz/fuzz_targets/: ext2_mount.rs
kernel/fuzz/src/: lib.rs
kernel/src/: acpi.rs  boot.rs  boot_cmdline.rs  build_info.rs  cpu.rs  debug_lockdep.rs  fbview.rs  fork_abi.rs  framebuffer.rs  hpet.rs  init_process.rs  input.rs  klog.rs  ksymtab.rs  lib.rs  lntab.rs  main.rs  pci.rs  serial.rs  test_harness.rs  test_hook.rs  time.rs
kernel/src/abi/: mod.rs  posix_types.rs
kernel/src/arch/: mod.rs
kernel/src/arch/x86_64/: apic.rs  backtrace.rs  csprng.rs  fork_trace.rs  fpu.rs  gdb_trampoline.rs  gdt.rs  idt.rs  interrupts.rs  ist_guard.rs  mod.rs  pic.rs  syscall.rs  uaccess.rs
kernel/src/arch/x86_64/syscalls/: creds.rs  ioctl.rs  mod.rs  vfs.rs
kernel/src/bench/: alloc_bench.rs  irq.rs  mod.rs
kernel/src/block/: cache.rs  mod.rs  virtio_blk.rs  writeback.rs
kernel/src/fs/: mod.rs
kernel/src/fs/ext2/: aops.rs  balloc.rs  create.rs  dir.rs  disk.rs  file.rs  fs.rs  ialloc.rs  indirect.rs  inode.rs  link.rs  mod.rs  orphan.rs  orphan_finalize.rs  rename.rs  setattr.rs  symlink.rs  unlink.rs  validate.rs
kernel/src/fs/ext2/fixtures/: README.md  balloc_test.img  golden.img  read_test.img
kernel/src/fs/vfs/: backend.rs  dentry.rs  devfs.rs  gc_queue.rs  init.rs  inode.rs  mod.rs  mount_resolve.rs  mount_table.rs  open_file.rs  ops.rs  path_walk.rs  ramfs.rs  registry.rs  super_block.rs  tarfs.rs
kernel/src/gdbstub/: framer.rs  mem.rs  mod.rs  regs.rs  transport.rs  uart.rs
kernel/src/ipc/: mod.rs  pipe.rs
kernel/src/mem/: addrspace.rs  aops.rs  auxv.rs  elf.rs  file_object.rs  frame.rs  heap.rs  loader.rs  mmap.rs  mod.rs  page_cache.rs  paging.rs  pat.rs  pf.rs  refcount.rs  tlb.rs  vma.rs  vmatree.rs  vmobject.rs
kernel/src/poll/: mod.rs  syscalls.rs
kernel/src/process/: mod.rs
kernel/src/shell/: ansi.rs  banner.rs  line_editor.rs  mod.rs  vfs_helpers.rs
kernel/src/signal/: frame.rs  mod.rs
kernel/src/sync/: irqlock.rs  mod.rs  mpmc.rs  mutex.rs  rwlock.rs  semaphore.rs  spsc.rs  waitqueue.rs
kernel/src/task/: env.rs  host_stub.rs  mod.rs  priority.rs  sched_core.rs  scheduler.rs  softirq.rs  switch.rs  task.rs  trace.rs
kernel/src/tty/: mod.rs  ntty.rs  ps2.rs  ring.rs  serial.rs  termios.rs
kernel/tests/: addrspace.rs  addrspace_drop.rs  anon_fault_saturated.rs  apic_online.rs  backtrace.rs  basic_boot.rs  block_cache_stress.rs  block_cache_sync_fs.rs  block_writeback.rs  block_writeback_inode_walk.rs  blocking_sync.rs  cow_vma.rs  demand_paging.rs  dentry_pin_unmount.rs  dynlinker_stub.rs  exec_atomic_partial_load.rs  execve_atomic.rs  execve_rejects_ptinterp.rs  ext2_block_alloc.rs  ext2_crash_consistency.rs  ext2_create.rs  ext2_dir_ops.rs  ext2_enospc.rs  ext2_file_read.rs  ext2_file_read_cache.rs  ext2_file_write.rs  ext2_ialloc.rs  ext2_inode_iget.rs  ext2_link.rs  ext2_malformed_dir.rs  ext2_mmap.rs  ext2_mount.rs  ext2_orphan_chain.rs  ext2_orphan_finalize.rs  ext2_orphan_open_close.rs  ext2_readahead.rs  ext2_readpage.rs  ext2_rename.rs  ext2_setattr.rs  ext2_truncate_below.rs  (+78 more)
kernel/tests/common/: ext2_ramdisk.rs
scripts/: auto-engineer.sh  docker-entrypoint.sh  repro-fork.sh
simulator/: Cargo.toml  README.md
simulator/docs/: trace-schema.md
simulator/src/: fault_plan.rs  invariants.rs  lib.rs  minimize.rs  proptest_model.rs  syscall_seam.rs  trace.rs
simulator/tests/: fast_suite.rs  nightly_sweep.rs  regression_501.rs
simulator/tests/seeds/: regression.txt
tests/fixtures/: ext2_image.sha256
tests/pjdfstest/: Cargo.toml
tests/pjdfstest/baseline/: expected.json
tests/pjdfstest/src/tests/: errors.rs  link.rs  mod.rs  open.rs  rename.rs  truncate.rs  utimensat.rs
userspace/hello/: Cargo.toml  link.ld
userspace/hello/src/: main.rs
userspace/init/: Cargo.toml  link.ld
userspace/init/src/: main.rs
userspace/pjdfstest_runner/: Cargo.toml  link.ld
userspace/pjdfstest_runner/src/: main.rs
userspace/repro_fork/: Cargo.toml  link.ld
userspace/repro_fork/src/: main.rs
userspace/shell_pipeline/: Cargo.toml
userspace/shell_pipeline/src/: main.rs
xtask/: Cargo.toml
xtask/src/: ext2_image.rs  isr_audit.rs  lntab.rs  main.rs  pjdfstest.rs
