[workspace]
members = ["kernel", "xtask", "userspace/hello", "userspace/init"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["vibix hackers"]
license = "MIT OR Apache-2.0"

[profile.dev]
panic = "abort"
opt-level = 1

[profile.release]
panic = "abort"
lto = true
codegen-units = 1

# panic="abort" for the test/bench profiles is enforced via the
# `-Z panic-abort-tests` flag in .cargo/config.toml; setting it here
# directly is ignored by cargo.
