[workspace]
members = [
    "kernel",
    "xtask",
    "userspace/hello",
    "userspace/init",
    "userspace/repro_fork",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["vibix hackers"]
license = "MIT OR Apache-2.0"

[profile.dev]
panic = "abort"
opt-level = 1

[profile.release]
panic = "abort"
lto = true
codegen-units = 1

# Line tables only — xtask parses .debug_line post-link to emit an
# embedded address→file:line:col table (issue #62), then strip_debug
# drops the DWARF from the shipped image.
[profile.dev.package.vibix]
debug = 1

[profile.release.package.vibix]
debug = 1

# panic="abort" for the test/bench profiles is enforced via the
# `-Z panic-abort-tests` flag in .cargo/config.toml; setting it here
# directly is ignored by cargo.
