[workspace]
members = [
    "kernel",
    # `simulator/` is the host-side DST simulator (RFC 0006). It is part
    # of the workspace so plain `cargo build` / `cargo test` exercise
    # the host-target build path that future Phase 2 work depends on,
    # but its only kernel dependency is gated on
    # `cfg(not(target_os = "none"))` so a bare-metal build of `vibix`
    # never pulls it in. See `simulator/Cargo.toml`.
    "simulator",
    # `bench/page-cache/` is the host-side cold-mmap fault-latency
    # baseline benchmark for RFC 0007. It models the
    # `PageCache::install_or_get` path through a stub
    # `AddressSpaceOps` so a baseline can be captured before the
    # page-fault wiring (#739) lands. `cargo xtask bench page-cache`
    # dispatches to its `bench-page-cache` binary.
    "bench/page-cache",
    "xtask",
    "userspace/hello",
    "userspace/init",
    "userspace/pjdfstest_runner",
    "userspace/repro_fork",
    "userspace/shell_pipeline",
]
# tests/pjdfstest is a vendored copy of saidsay-so/pjdfstest (2-clause BSD). It
# is intentionally kept outside the workspace until #581 wires it into xtask —
# its nightly target, dep versions, and unstable features must not leak into
# the kernel build graph.
#
# kernel/fuzz is the host-side fuzz harness for the ext2 driver (#677). It is
# excluded from the main workspace because it builds for the host
# (x86_64-unknown-linux-gnu) and depends on `vibix` with the non-default
# `host-fuzz` feature; pulling it into the workspace would force the host
# feature surface on the kernel-target build graph. `cargo xtask fuzz ext2`
# drives it directly.
exclude = ["tests/pjdfstest", "kernel/fuzz"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["vibix hackers"]
license = "MIT OR Apache-2.0"

[profile.dev]
panic = "abort"
opt-level = 1

[profile.release]
panic = "abort"
lto = true
codegen-units = 1

# Line tables only — xtask parses .debug_line post-link to emit an
# embedded address→file:line:col table (issue #62), then strip_debug
# drops the DWARF from the shipped image.
[profile.dev.package.vibix]
debug = 1

[profile.release.package.vibix]
debug = 1

# panic="abort" for the test/bench profiles is enforced via the
# `-Z panic-abort-tests` flag in .cargo/config.toml; setting it here
# directly is ignored by cargo.
