[package]
name = "vibix"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lib]
name = "vibix"
path = "src/lib.rs"

[[bin]]
name = "vibix"
path = "src/main.rs"

[dependencies]
limine = "0.5"
spin = { version = "0.9", default-features = false, features = ["mutex", "spin_mutex", "lazy", "rwlock"] }
x86_64 = "0.15"
uart_16550 = "0.3"
font8x8 = { version = "0.3", default-features = false, features = ["unicode"] }
linked_list_allocator = "0.10"
pic8259 = "0.11"
pc-keyboard = "0.8"

[features]
default = []
# Enable to trigger a UD2 after init; verifies the invalid-opcode handler path.
fault-test = []
# Enable to fire a deliberate `panic!()` after init; useful for eyeballing
# the panic-path backtrace end-to-end on a real boot.
panic-test = []
# Enable to deliberately overflow the #DF IST stack after init; verifies
# that the guard page below the stack catches overflow as a #PF instead
# of letting it silently corrupt .bss. Manual verification only —
# successful overflow is indistinguishable from other crashes in CI.
ist-overflow-test = []
# Enable the in-kernel microbenchmark harness. Adds two rdtsc + an atomic
# store to the timer ISR and spawns a bench task at boot that prints a
# summary table over serial. Off by default so normal boots stay quiet.
bench = []

[[test]]
name = "basic_boot"
harness = false

[[test]]
name = "heap_alloc"
harness = false

[[test]]
name = "should_panic"
harness = false

[[test]]
name = "timer_tick"
harness = false

[[test]]
name = "paging"
harness = false

[[test]]
name = "tasks"
harness = false

[[test]]
name = "heap_grow"
harness = false

[[test]]
name = "preempt"
harness = false

[[test]]
name = "pml4_switch"
harness = false

[[test]]
name = "apic_online"
harness = false

[[test]]
name = "backtrace"
harness = false

[[test]]
name = "page_fault"
harness = false

[[test]]
name = "blocking_sync"
harness = false

[[test]]
name = "shell_smoke"
harness = false

[[test]]
name = "priority"
harness = false

[[test]]
name = "per_task_cr3"
harness = false

[[test]]
name = "demand_paging"
harness = false

[[test]]
name = "userspace_module"
harness = false

[[test]]
name = "userspace_loader"
harness = false

[[test]]
name = "sleep"
harness = false

[[test]]
name = "pci_enum"
harness = false

[[test]]
name = "serial_rx"
harness = false

[[test]]
name = "cow_vma"
harness = false

[[test]]
name = "fpu_context_switch"
harness = false

[[test]]
name = "task_exit"
harness = false

[[test]]
name = "addrspace"
harness = false

[[test]]
name = "addrspace_drop"
harness = false

[[test]]
name = "fork_cow"
harness = false

[[test]]
name = "tlb_flusher"
harness = false
