[package]
name = "vibix"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lib]
name = "vibix"
path = "src/lib.rs"

[[bin]]
name = "vibix"
path = "src/main.rs"

[dependencies]
limine = "0.5"
spin = { version = "0.9", default-features = false, features = ["mutex", "spin_mutex", "lazy", "rwlock"] }
x86_64 = "0.15"
uart_16550 = "0.3"
font8x8 = { version = "0.3", default-features = false, features = ["unicode"] }
linked_list_allocator = "0.10"
pic8259 = "0.11"
pc-keyboard = "0.8"

[features]
default = []
# Enable to trigger a UD2 after init; verifies the invalid-opcode handler path.
fault-test = []
# Enable to fire a deliberate `panic!()` after init; useful for eyeballing
# the panic-path backtrace end-to-end on a real boot.
panic-test = []
# Enable to deliberately overflow the #DF IST stack after init; verifies
# that the guard page below the stack catches overflow as a #PF instead
# of letting it silently corrupt .bss. Manual verification only —
# successful overflow is indistinguishable from other crashes in CI.
ist-overflow-test = []
# Enable the in-kernel microbenchmark harness. Adds two rdtsc + an atomic
# store to the timer ISR and spawns a bench task at boot that prints a
# summary table over serial. Off by default so normal boots stay quiet.
bench = []
# Enable serial-print instrumentation along the fork(2) syscall path:
# SYSCALL entry → dispatch arm 57 → fork_current_task → fork_address_space →
# Task::new_forked → process::register → fork_child_sysret. Each probe is
# paired entry/exit so the last surviving print pinpoints where the kernel
# wedges. IF state is dumped on fork-dispatch entry (expected 0, masked by
# MSR_FMASK). Canary for future regressions of the fork hang surface
# tracked in epic #501 / diagnostic #502. Off by default; release builds
# never ship it. Enable with `cargo xtask run --features fork-trace` (or
# `--features fork-trace` on any xtask subcommand).
fork-trace = []
# Workstream A ↔ B gate (RFC 0004). When off, POSIX write-side VFS
# syscalls added by Workstream A (mkdir/mkdirat today; rmdir/unlink/…
# in sibling PRs) compile to `-ENOSYS`. Workstream B flips this on in
# the same PR that lands `Task::credentials`, so per-task credentials
# are always available at every DAC-sensitive call site. Keeps a
# partially-landed Workstream A from exposing an unauthenticated
# DAC-bypass window.
vfs_creds = []

[[test]]
name = "basic_boot"
harness = false

[[test]]
name = "heap_alloc"
harness = false

[[test]]
name = "should_panic"
harness = false

[[test]]
name = "timer_tick"
harness = false

[[test]]
name = "paging"
harness = false

[[test]]
name = "tasks"
harness = false

[[test]]
name = "heap_grow"
harness = false

[[test]]
name = "preempt"
harness = false

[[test]]
name = "softirq"
harness = false

[[test]]
name = "pml4_switch"
harness = false

[[test]]
name = "apic_online"
harness = false

[[test]]
name = "backtrace"
harness = false

[[test]]
name = "page_fault"
harness = false

[[test]]
name = "blocking_sync"
harness = false

[[test]]
name = "shell_smoke"
harness = false

[[test]]
name = "priority"
harness = false

[[test]]
name = "per_task_cr3"
harness = false

[[test]]
name = "demand_paging"
harness = false

[[test]]
name = "userspace_module"
harness = false

[[test]]
name = "userspace_loader"
harness = false

[[test]]
name = "sleep"
harness = false

[[test]]
name = "pci_enum"
harness = false

[[test]]
name = "serial_rx"
harness = false

[[test]]
name = "cow_vma"
harness = false

[[test]]
name = "fpu_context_switch"
harness = false

[[test]]
name = "fork_fpu_inherit"
harness = false

[[test]]
name = "task_exit"
harness = false

[[test]]
name = "addrspace"
harness = false

[[test]]
name = "addrspace_drop"
harness = false

[[test]]
name = "exec_atomic_partial_load"
harness = false

[[test]]
name = "execve_atomic"
harness = false

[[test]]
name = "fork_cow"
harness = false

[[test]]
name = "fork_refcount"
harness = false

[[test]]
name = "tlb_flusher"
harness = false

[[test]]
name = "smep_smap"
harness = false

[[test]]
name = "fd_table"
harness = false

[[test]]
name = "syscall_open_mmap"
harness = false

[[test]]
name = "syscall_vfs"
harness = false

[[test]]
name = "syscall_lseek"
harness = false

[[test]]
name = "syscall_getdents"
harness = false

[[test]]
name = "syscall_fcntl"
harness = false

[[test]]
name = "syscall_dup_family"
harness = false

[[test]]
name = "syscall_open_flags"
harness = false

[[test]]
name = "vm_integration"
harness = false

[[test]]
name = "syscall_mmap_family"
harness = false

[[test]]
name = "vfs_backend"
harness = false

[[test]]
name = "vfs_hello"
harness = false

[[test]]
name = "rootfs_module"
harness = false

[[test]]
name = "anon_fault_saturated"
harness = false

[[test]]
name = "shell_introspection"
harness = false

[[test]]
name = "session_syscalls"
harness = false

[[test]]
name = "tty_jobctl_ioctls"
harness = false

[[test]]
name = "tty_tostop_sigttou"
harness = false

[[test]]
name = "tty_sigttin_read"
harness = false

[[test]]
name = "shell_help"
harness = false

[[test]]
name = "syscall_mkfifo"
harness = false

[[test]]
name = "syscall_mkdir"
harness = false

[[test]]
name = "syscall_rmdir"
harness = false

[[test]]
name = "syscall_unlink"
harness = false

[[test]]
name = "ntty_sigint_flush"
harness = false

[[test]]
name = "gdbstub_loop"
harness = false

[[test]]
name = "syscall_stack_switch"
harness = false

[[test]]
name = "wait4_condvar_race"
harness = false

[[test]]
name = "signal_sa_restart_preserves_args"
harness = false

[[test]]
name = "block_cache_sync_fs"
harness = false
