[package]
name = "vibix"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[lib]
name = "vibix"
path = "src/lib.rs"

[[bin]]
name = "vibix"
path = "src/main.rs"

[dependencies]
limine = "0.5"
spin = { version = "0.9", default-features = false, features = ["mutex", "spin_mutex", "lazy", "rwlock"] }
x86_64 = "0.15"
uart_16550 = "0.3"
font8x8 = { version = "0.3", default-features = false, features = ["unicode"] }
linked_list_allocator = "0.10"
pic8259 = "0.11"
pc-keyboard = "0.8"

[features]
default = ["vfs_creds"]
# Enable to trigger a UD2 after init; verifies the invalid-opcode handler path.
fault-test = []
# Enable to fire a deliberate `panic!()` after init; useful for eyeballing
# the panic-path backtrace end-to-end on a real boot.
panic-test = []
# Enable to deliberately overflow the #DF IST stack after init; verifies
# that the guard page below the stack catches overflow as a #PF instead
# of letting it silently corrupt .bss. Manual verification only —
# successful overflow is indistinguishable from other crashes in CI.
ist-overflow-test = []
# Enable the in-kernel microbenchmark harness. Adds two rdtsc + an atomic
# store to the timer ISR and spawns a bench task at boot that prints a
# summary table over serial. Off by default so normal boots stay quiet.
bench = []
# Enable serial-print instrumentation along the fork(2) syscall path:
# SYSCALL entry → dispatch arm 57 → fork_current_task → fork_address_space →
# Task::new_forked → process::register → fork_child_sysret. Each probe is
# paired entry/exit so the last surviving print pinpoints where the kernel
# wedges. IF state is dumped on fork-dispatch entry (expected 0, masked by
# MSR_FMASK). Canary for future regressions of the fork hang surface
# tracked in epic #501 / diagnostic #502. Off by default; release builds
# never ship it. Enable with `cargo xtask run --features fork-trace` (or
# `--features fork-trace` on any xtask subcommand).
fork-trace = []
# RFC 0005 Phase 1 wave 3 (#668). Enables `MockClock` /
# `MockTimerIrq` in `task::env` for deterministic scheduler tests and
# the future host-side simulator (Phase 2). Off by default; the
# nm-check guard (#669) statically verifies the symbols don't appear
# in a release-built kernel ELF — keep this strictly opt-in so that
# guard stays meaningful. No `target_os` exception: the mocks must be
# unreachable on a real boot, not just "not normally built".
sched-mock = []
# Workstream A ↔ B gate (RFC 0004). On by default as of #550 — every
# VFS syscall entry now reads the caller's per-task credential
# snapshot via `crate::task::current_credentials()` (no more
# `Credential::kernel()` fallback at any userspace-driven call site).
# Disable explicitly with `--no-default-features` to compile the
# Workstream A write-side syscalls back out to `-ENOSYS`; this is
# only useful for re-running the dispatch-gate regression tests in
# the `kernel/tests/syscall_*.rs` files that assert the off-branch
# behaviour. Production builds always run with the feature on.
vfs_creds = []
# RFC 0004 Workstream D/E feature gate. When off, the ext2 on-disk
# types (`fs::ext2::disk`) still compile (they're pure data, host unit
# tests round-trip them against a golden `mkfs.ext2` fixture), but the
# trait impls (`Ext2Fs`, `Ext2Super`) do not. This keeps a
# partially-landed driver from accidentally being reachable through
# the boot mount path while the inode / dir-entry / allocator surfaces
# are still being built out. Integration tests that exercise the
# driver (`ext2_mount`, future waves) flip this on with
# `--features ext2`.
ext2 = []
# RFC 0007 page-cache migration window. When on, `Inode` carries a
# `mapping: BlockingRwLock<Option<Arc<PageCache>>>` slot that backing
# filesystems lazily install on first mmap or first read-via-cache (RFC
# 0007 §Inode-binding rule). Off by default for the migration window so
# the field's memory and lock costs land on a deliberate flip rather
# than implicitly. The follow-on wave-2 sites (`sys_mmap`, per-FS
# `FileOps::mmap` impls) will gate their reads on the same flag; until
# they land, the field is constructible but unused, and the
# `Inode::page_cache_or_create` install-once helper is the only call
# site.
page_cache = []

[[test]]
name = "basic_boot"
harness = false

[[test]]
name = "heap_alloc"
harness = false

[[test]]
name = "should_panic"
harness = false

[[test]]
name = "timer_tick"
harness = false

[[test]]
name = "paging"
harness = false

[[test]]
name = "tasks"
harness = false

[[test]]
name = "heap_grow"
harness = false

[[test]]
name = "preempt"
harness = false

[[test]]
name = "softirq"
harness = false

[[test]]
name = "pml4_switch"
harness = false

[[test]]
name = "apic_online"
harness = false

[[test]]
name = "backtrace"
harness = false

[[test]]
name = "page_fault"
harness = false

[[test]]
name = "blocking_sync"
harness = false

[[test]]
name = "shell_smoke"
harness = false

[[test]]
name = "priority"
harness = false

[[test]]
name = "per_task_cr3"
harness = false

[[test]]
name = "demand_paging"
harness = false

[[test]]
name = "userspace_module"
harness = false

[[test]]
name = "userspace_loader"
harness = false

[[test]]
name = "sleep"
harness = false

[[test]]
name = "pci_enum"
harness = false

[[test]]
name = "serial_rx"
harness = false

[[test]]
name = "cow_vma"
harness = false

[[test]]
name = "fpu_context_switch"
harness = false

[[test]]
name = "fork_fpu_inherit"
harness = false

[[test]]
name = "task_exit"
harness = false

[[test]]
name = "addrspace"
harness = false

[[test]]
name = "addrspace_drop"
harness = false

[[test]]
name = "exec_atomic_partial_load"
harness = false

[[test]]
name = "execve_atomic"
harness = false

[[test]]
name = "execve_rejects_ptinterp"
harness = false

[[test]]
name = "fork_cow"
harness = false

[[test]]
name = "fork_refcount"
harness = false

[[test]]
name = "tlb_flusher"
harness = false

[[test]]
name = "smep_smap"
harness = false

[[test]]
name = "fd_table"
harness = false

[[test]]
name = "syscall_open_mmap"
harness = false

[[test]]
name = "syscall_vfs"
harness = false

[[test]]
name = "syscall_lseek"
harness = false

[[test]]
name = "syscall_getdents"
harness = false

[[test]]
name = "syscall_fcntl"
harness = false

[[test]]
name = "syscall_dup_family"
harness = false

[[test]]
name = "syscall_open_flags"
harness = false

[[test]]
name = "vm_integration"
harness = false

[[test]]
name = "syscall_mmap_family"
harness = false

[[test]]
name = "vfs_backend"
harness = false

[[test]]
name = "vfs_hello"
harness = false

[[test]]
name = "rootfs_module"
harness = false

[[test]]
name = "anon_fault_saturated"
harness = false

[[test]]
name = "shell_introspection"
harness = false

[[test]]
name = "session_syscalls"
harness = false

[[test]]
name = "tty_jobctl_ioctls"
harness = false

[[test]]
name = "tty_tostop_sigttou"
harness = false

[[test]]
name = "tty_sigttin_read"
harness = false

[[test]]
name = "shell_help"
harness = false

[[test]]
name = "shell_files"
harness = false

[[test]]
name = "syscall_mkfifo"
harness = false

[[test]]
name = "syscall_mkdir"
harness = false

[[test]]
name = "syscall_rmdir"
harness = false

[[test]]
name = "syscall_unlink"
harness = false

[[test]]
name = "syscall_link_symlink"
harness = false

[[test]]
name = "syscall_getuid_family"
harness = false

[[test]]
name = "syscall_chmod_chown"
harness = false

[[test]]
name = "syscall_setuid_family"
harness = false

[[test]]
name = "syscall_setgroups_family"
harness = false

[[test]]
name = "syscall_truncate"
harness = false

[[test]]
name = "syscall_utimensat"
harness = false

[[test]]
name = "syscall_faccessat"
harness = false

[[test]]
name = "ntty_sigint_flush"
harness = false

[[test]]
name = "ntty_ldisc_wiring"
harness = false

[[test]]
name = "gdbstub_loop"
harness = false

[[test]]
name = "syscall_stack_switch"
harness = false

[[test]]
name = "wait4_condvar_race"
harness = false

[[test]]
name = "signal_sa_restart_preserves_args"
harness = false

[[test]]
name = "block_cache_sync_fs"
harness = false

[[test]]
name = "ext2_mount"
harness = false
required-features = ["ext2"]

[[test]]
name = "mount_dev_resolve"
harness = false
required-features = ["ext2"]

[[test]]
name = "block_writeback"
harness = false

[[test]]
name = "ext2_inode_iget"
harness = false
required-features = ["ext2"]

[[test]]
name = "ext2_file_read"
harness = false
required-features = ["ext2"]

[[test]]
name = "ext2_readpage"
harness = false
required-features = ["ext2"]

[[test]]
name = "ext2_writepage"
harness = false
required-features = ["ext2"]

[[test]]
name = "ext2_readahead"
harness = false
required-features = ["ext2"]

[[test]]
name = "ext2_orphan_chain"
harness = false
required-features = ["ext2"]

[[test]]
name = "ext2_block_alloc"
harness = false
required-features = ["ext2"]

[[test]]
name = "ext2_dir_ops"
harness = false
required-features = ["ext2"]

[[test]]
name = "ext2_malformed_dir"
harness = false
required-features = ["ext2"]

[[test]]
name = "ext2_enospc"
harness = false
required-features = ["ext2"]

[[test]]
name = "ext2_ialloc"
harness = false
required-features = ["ext2"]

[[test]]
name = "ext2_file_write"
harness = false
required-features = ["ext2"]

[[test]]
name = "ext2_unlink"
harness = false
required-features = ["ext2"]

[[test]]
name = "ext2_setattr"
harness = false
required-features = ["ext2"]

[[test]]
name = "ext2_create"
harness = false
required-features = ["ext2"]

[[test]]
name = "ext2_link"
harness = false
required-features = ["ext2"]

[[test]]
name = "umount2_flags"
harness = false

[[test]]
name = "umount2_canonicalize"
harness = false

[[test]]
name = "dentry_pin_unmount"
harness = false

[[test]]
name = "ext2_orphan_finalize"
harness = false
required-features = ["ext2"]

[[test]]
name = "ext2_orphan_open_close"
harness = false
required-features = ["ext2"]

[[test]]
name = "ext2_rename"
harness = false
required-features = ["ext2"]

[[test]]
name = "ext2_validate_bgdt"
harness = false
required-features = ["ext2"]

[[test]]
name = "ext2_crash_consistency"
harness = false
required-features = ["ext2"]

[[test]]
name = "block_cache_stress"
harness = false

[[test]]
name = "syscall_fsync"
harness = false
