# Host-side DST simulator (RFC 0006). This crate is host-only by design —
# it consumes the `sched-mock` seam from the kernel crate (`vibix`) to
# drive `kernel::task::preempt_tick()` one tick at a time under a seeded
# `MockClock` + `MockTimerIrq` pair. See `docs/RFC/0006-host-dst-simulator.md`.
#
# Issue #715 lands this skeleton only; the run loop (#716), trace recorder
# (#717), `sched_mock_trace!` macro (#718), invariant checker (#722), and
# CI sweep (#723) all stack on top.
[package]
name = "simulator"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
publish = false
description = "Host-side deterministic simulator for the vibix kernel (RFC 0006)."

[lib]
name = "simulator"
path = "src/lib.rs"

[[bin]]
name = "replay"
path = "src/bin/replay.rs"

# The kernel crate (`vibix`) is `#![no_std]` and host-buildable under the
# `sched-mock` feature as of #714. We gate the dependency on
# `cfg(not(target_os = "none"))` so that the bare-metal kernel-image
# build graph (target `x86_64-unknown-none`) cannot accidentally pull
# this crate in — the simulator is host-only and must never appear in a
# shipping kernel ELF. The `host-build (sched-mock)` CI job uses target
# `x86_64-unknown-linux-gnu`, which matches the gate.
[target.'cfg(not(target_os = "none"))'.dependencies]
vibix = { path = "../kernel", features = ["sched-mock"] }
