[package]
name = "xtask"
version.workspace = true
edition.workspace = true

[[bin]]
name = "xtask"
path = "src/main.rs"

[dependencies]
object = { version = "0.36", default-features = false, features = ["read", "std"] }
rustc-demangle = "0.1"
gimli = { version = "0.31", default-features = false, features = ["read-all"] }
